@@ -3,6 +3,7 @@ Current Release
 - Removed the rest of LDAP traces.
 - Made ldap import from roster_server first, then current directory.
 - Made roster_server.conf and added it to setup.py to install in /etc.
+- Removed leftover unused function ExpireCredentials.
 
 2009-09-23 release-0.5
 - Made trunk install as version 0.1
